--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -83,6 +83,7 @@ Stock Score | Today
                             <tr>
                                 <th scope="col" class="p-0  pb-1 pt-1"></th>
                                 <th scope="col" class="fs--2 p-0 pb-1 pt-1">Company</th>
+                                <th scope="col" class="fs--2 text-center p-0 pb-1 pt-1">Upside</th>
                                 <th scope="col" class="fs--2 text-center p-0 pb-1 pt-1">Score</th>
                             </tr>
                         </thead>
@@ -397,6 +398,7 @@ docReady(marketEmotionMobileInit);
                         <tr>
                             <th scope="col" class="p-0 pb-1 pt-1"></th>
                             <th scope="col" class="fs--2 p-0 pb-1 pt-1">Company</th>
+                            <th scope="col" class="fs--2 p-0 pb-1 pt-1 text-center">Upside</th>
                             <th scope="col" class="fs--2 p-0 pb-1 pt-1 text-center">Score</th>
                         </tr>
                     </thead>
