style welcome email template

--- a/app/templates/account/email/welcome.html
+++ b/app/templates/account/email/welcome.html
@@ -1,21 +1,34 @@
+
 <div>
-    <img style="width: 170px;" src="../../static/images/Stock_score_logos/Logo_name.png" alt="">
+    <img style="width: 170px;" src="https://www.stockscore.company/static/images/Stock_score_logos/Logo_name.png" alt="">
 </div>
-<div>
+<h3 style='color:#344050; font-family: "Poppins",Arial,sans-serif; line-height: 1.2;font-size: 20px;font-weight: 600'>
     <p>Dear {{user.email}},</p>
     <p>Welcome to Stock Score platform, the place where You can find the most comprehencive stock and market data, updated daily !</p>
+</h3>
+<h3 style='color:#344050; font-family: "Poppins",Arial,sans-serif; line-height: 1.2;font-size: 20px;font-weight: 600'>
+Several features:
+</h3>
+<table>
+    <tr>
+        <td>
+            <div style="color:#5e6e82;font-family:Open Sans,Arial,sans-serif;font-size:16px">
+            <ul style="list-style: none;padding: 0;">
+                <img src="https://www.stockscore.company/static/mainpage/assets/images/Light_green_check.svg" alt=""><li style="margin-bottom: 8px;"><span style="color: #2c7be5;">Stock score</span> - based on fundamental financial analysis enriched by the most updated media sentiment </li>
+                <img src="https://www.stockscore.company/static/mainpage/assets/images/Light_green_check.svg" alt=""><li style="margin-bottom: 8px;"><span style="color: #2c7be5;">Market sentiment</span> - market breadth aggregated from several independent sources, helping You to understand what other market players feel and more important – when they put their money on.</li>
+                <img src="https://www.stockscore.company/static/mainpage/assets/images/Light_green_check.svg" alt=""><li style="margin-bottom: 8px;"><span style="color: #2c7be5;">Portfolio</span> - track Your personal favorite stocks, and get the most up-to-date info about them – track their performance – same as You would if they were really added to Your portfolio.</li>
+                <img src="https://www.stockscore.company/static/mainpage/assets/images/Light_green_check.svg" alt=""><li ><span style="color: #2c7be5;">Signals and alerts</span> - get general market alerts and good entry point signals for Your favorite stocks or generally according to Your preferences</li>
+            </ul>
 </div>
-<div>
-    <ul style="list-style: none;">
-        <li><span style="color: #2c7be5;">Stock score</span> - based on fundamental financial analysis enriched by the most updated media sentiment </li>
-        <li><span style="color: #2c7be5;">Market sentiment</span> - market breath aggregated from several independand sources, helping You to understand what other market players feel and more important – whtat they put they money on.</li>
-        <li><span style="color: #2c7be5;">Portfolio</span> - track Your personal favourite stocks, and get the most up to date info about them – track their performance – same as You would, if they were really added to You portfolio.</li>
-        <li><span style="color: #2c7be5;">Signals and alerts</span> - get general market alerts and good entry point signals for Your favorite stocks or genrally according to Your preferrences</li>
-    </ul>
-</div>
-<div>
+        </td>
+        <td>
+             <img style="max-width: 640px;" src="https://www.stockscore.company/static/mainpage/assets/images/scoreImg.png" alt="">
+        </td>
+    </tr>
+</table>
+<h3 style='color:#344050; font-family: "Poppins",Arial,sans-serif; line-height: 1.2;font-size: 20px;font-weight: 600'>
     <p>
-        Stock Score is available in browser from any device – START creting your portfolio.
+        Stock Score is available in browser from any device – <a href="https://www.stockscore.company/account/login">START</a> creating your portfolio.
     </p>
-</div>
+</h3>
 
