style welcome email template

--- a/app/templates/account/email/welcome.html
+++ b/app/templates/account/email/welcome.html
@@ -12,14 +12,31 @@ Several features:
 <table>
     <tr>
         <td>
+   
             <div style="color:#5e6e82;font-family:Open Sans,Arial,sans-serif;font-size:16px">
-            <ul style="list-style: none;padding: 0;">
-                <li style="margin-bottom: 8px;"><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""><span style="color: #2c7be5;">Stock score</span> - based on fundamental financial analysis enriched by the most updated media sentiment </li>
-                <li style="margin-bottom: 8px;"><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""><span style="color: #2c7be5;">Market sentiment</span> - market breadth aggregated from several independent sources, helping You to understand what other market players feel and more important – when they put their money on.</li>
-                <li style="margin-bottom: 8px;"><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""><span style="color: #2c7be5;">Portfolio</span> - track Your personal favorite stocks, and get the most up-to-date info about them – track their performance – same as You would if they were really added to Your portfolio.</li>
-                <li ><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""><span style="color: #2c7be5;">Signals and alerts</span> - get general market alerts and good entry point signals for Your favorite stocks or generally according to Your preferences</li>
-            </ul>
-</div>
+              <table>
+                <tr>
+                    <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                    <td> <div ><span style="color: #2c7be5;">Stock score</span> - based on fundamental financial analysis enriched by the most updated media sentiment </div></td>
+                </tr>
+                  <tr>
+                       <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                      <td>  <div ><span style="color: #2c7be5;">Market sentiment</span> - market breadth aggregated from several independent sources, helping You to understand what other market players feel and more important – when they put their money on.</div></td>
+                  </tr>
+                  <tr>
+                        <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                      <td><div ><span style="color: #2c7be5;">Portfolio</span> - track Your personal favorite stocks, and get the most up-to-date info about them – track their performance – same as You would if they were really added to Your portfolio.</div></td>
+                  </tr>
+                  <tr>
+                        <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                      <td>
+                           <div ><span style="color: #2c7be5;">Signals and alerts</span> - get general market alerts and good entry point signals for Your favorite stocks or generally according to Your preferences</div>
+                      </td>
+                  </tr>
+            </table>
+               
+
+            </div>
         </td>
         <td>
              <img style="max-width: 640px;" src="https://www.stockscore.company/static/mainpage/assets/images/scoreImg.png" alt="">
