--- a/app/templates/account/email/welcome.html
+++ b/app/templates/account/email/welcome.html
@@ -14,21 +14,21 @@ Several features:
         <td>
    
             <div style="color:#5e6e82;font-family:Open Sans,Arial,sans-serif;font-size:16px">
-              <table>
+              <table style="border-collapse: separate;border-spacing: 0 15px;">
                 <tr>
-                    <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                    <td><img style="width:20px;padding-right: 5px;" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
                     <td> <div ><span style="color: #2c7be5;">Stock score</span> - based on fundamental financial analysis enriched by the most updated media sentiment </div></td>
                 </tr>
                   <tr>
-                       <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                       <td><img style="width:20px;padding-right: 5px;" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
                       <td>  <div ><span style="color: #2c7be5;">Market sentiment</span> - market breadth aggregated from several independent sources, helping You to understand what other market players feel and more important – when they put their money on.</div></td>
                   </tr>
                   <tr>
-                        <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                        <td><img style="width:20px;padding-right: 5px;" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
                       <td><div ><span style="color: #2c7be5;">Portfolio</span> - track Your personal favorite stocks, and get the most up-to-date info about them – track their performance – same as You would if they were really added to Your portfolio.</div></td>
                   </tr>
                   <tr>
-                        <td><img style="width:30px" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
+                        <td><img style="width:20px;padding-right: 5px;" src="https://www.stockscore.company/static/images/main/light_green_check.svg" alt=""></td>
                       <td>
                            <div ><span style="color: #2c7be5;">Signals and alerts</span> - get general market alerts and good entry point signals for Your favorite stocks or generally according to Your preferences</div>
                       </td>
