fixes for welcome

--- a/app/templates/account/email/welcome.html
+++ b/app/templates/account/email/welcome.html
@@ -39,7 +39,7 @@ Several features:
             </div>
         </td>
         <td>
-             <img style="max-width: 640px;" src="https://www.stockscore.company/static/mainpage/assets/images/scoreImg.png" alt="">
+             <img style="max-width: 640px;width: 100%;min-width: 165px;" src="https://www.stockscore.company/static/mainpage/assets/images/scoreImg.png" alt="">
         </td>
     </tr>
 </table>
